# markbooks

./: .env.example  README.md  main.py  pyproject.toml
auth/: auth.py
bookmark/: bookmark.py  utils.py
database/: database.py
models/: models.py
parser/: parser.py
services/: services.py
utils/: utils.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  main.jsx
web/src/components/: Avatar.jsx  BookmarkCard.jsx  BookmarkModal.jsx  EditModal.jsx  Header.jsx  SearchBar.jsx  Sidebar.jsx  ThemeToggle.jsx
web/src/pages/: Dashboard.jsx  Login.jsx
web/src/services/: api.js
web/src/styles/: global.css
web/src/utils/: helpers.js
