[project]
name = "bookmark-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.3.0",
    "beautifulsoup4>=4.14.2",
    "environs>=14.3.0",
    "fastapi>=0.119.0",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.11",
    "pydantic[email]>=2.12.1",
    "pyjwt>=2.10.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]
